AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} DIR_tools_SRCS)
ADD_EXECUTABLE(BaseTools ${DIR_tools_SRCS})
TARGET_LINK_LIBRARIES(BaseTools  ${ZSmartLib_zUtility_LIBRARIES} )

install(TARGETS BaseTools
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
        RUNTIME DESTINATION ${BIN_INSTALL_DIR})