INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/lib_json DIR_SRCS)
ADD_LIBRARY(jsoncpp ${DIR_SRCS})
TARGET_LINK_LIBRARIES(jsoncpp ${DB_LIBRARIES})

install(TARGETS jsoncpp
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
        RUNTIME DESTINATION ${BIN_INSTALL_DIR})