AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} DIR_SRCS)

add_executable(ProducerConsumer ProducerConsumer.cpp CircularQueue.cpp)
TARGET_LINK_LIBRARIES(ProducerConsumer  pthread)


MESSAGE(STATUS "LIB_INSTALL_DIR" ${LIB_INSTALL_DIR})
MESSAGE(STATUS "BIN_INSTALL_DIR" ${BIN_INSTALL_DIR})
MESSAGE(STATUS "BIN_INSTALL_DIR" ${CMAKE_CURRENT_SOURCE_DIR})


install(TARGETS ProducerConsumer
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
        RUNTIME DESTINATION ${BIN_INSTALL_DIR})