AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} DIR_SRCS)

add_executable(SpecialDataForThread ForkJoin.cpp )
TARGET_LINK_LIBRARIES(SpecialDataForThread  pthread)


MESSAGE(STATUS "LIB_INSTALL_DIR" ${LIB_INSTALL_DIR})
MESSAGE(STATUS "BIN_INSTALL_DIR" ${BIN_INSTALL_DIR})
MESSAGE(STATUS "BIN_INSTALL_DIR" ${CMAKE_CURRENT_SOURCE_DIR})


install(TARGETS SpecialDataForThread
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
        RUNTIME DESTINATION ${BIN_INSTALL_DIR})